--- a/summarize-varied/Markdown用法小记.ipynb
+++ b/summarize-varied/Markdown用法小记.ipynb
@@ -89,7 +89,10 @@
     "\n",
     "[^林则徐]离我越来越远啦！  \n",
     "\n",
-    "[^林则徐]: 苟利国家生死以，岂因祸福避趋之。"
+    "[^林则徐]: 苟利国家生死以，岂因祸福避趋之。\n",
+    "[^中国]鲜红的太阳永不落.\n",
+    "\n",
+    "[^中国]: 中华人民共和国"
    ]
   },
   {
@@ -218,7 +221,7 @@
     "- 接着一个方括号，里面放上图片的替代文字\n",
     "- 接着一个普通括号，里面放上图片的网址，最后还可以用引号包住并加上选择性的 'title' 属性的文字。\n",
     "\n",
-    "![王阳明](https://imgsrc.baidu.com/baike/pic/item/0e2442a7d933c8957b969953dd1373f082020029.jpg)  \n",
+    "![avatar]()\n",
     "![阳明先生](https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=e3c890028735e5dd8421ad8d17afcc8a/5bafa40f4bfbfbed076e462f7af0f736afc31fae.jpg \"心学鼻祖\")\n",
     "\n",
     "当然，类似网址使用变量的方法通用与图片的引用。  \n",
@@ -261,21 +264,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
